# shotwell-make-event-with-top-dir

./: .gitignore  Cargo.toml
src/: main.rs
