[package]
name = "shotwell-make-event-with-top-dir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.31"
indicatif = "0.17.8"
jdt = { git = "ssh://git@github.com/amachang/jdt.git", version = "0.1.0" }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
